--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -349,7 +349,7 @@
 
   <div class="main-content">
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center mb-5 mb-lg-6">
         <div class="col-12 col-lg-6">
           <div class="card mt-n38">
             <div class="card-header">
@@ -614,8 +614,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12 col-lg-6">
-              <h3 class="h1">88mph risks disclosures</h3>
+            <div class="col-12 col-lg-6 mb-6 mb-lg-0">
+              <h3 class="h1">88mph risk disclosure</h3>
               <p>If the interest rate offered by 88mph's underlying money market (e.g. Compound) drops too low, and many
                 users try to withdraw at the same time, then 88mph could be temporarily insolvent, forcing users to wait
                 a bit more to be able to withdraw their full deposit.</p>
@@ -672,7 +672,7 @@
 
           </div>
           <div class="text-center mb-4">
-            <a href="https://twitter.com/88mphapp" target="_blank">
+            <a class="mr-4" href="https://twitter.com/88mphapp" target="_blank">
               <i class="fe fe-twitter h1"></i>
             </a>
             <a href="https://github.com/Bacon-labs" target="_blank">
