--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -326,11 +326,11 @@
         <div class="row justify-content-center">
           <div class="col-12 col-lg-6 text-center">
             <!-- Pretitle -->
-            <span class="h5 mb-0 header-pretitle text-white d-block">
+            <span class="h5 mb-0 header-pretitle text-dark d-block">
               Earn
             </span>
-            <span class="display-2 text-dark d-block">{{oneYearInterestRate.toFormat(DECIMALS)}}<span class="h4">%</span></span>
-            <span class="h5 header-pretitle text-white d-block mb-5">
+            <span class="display-2 text-white d-block">{{oneYearInterestRate.toFormat(DECIMALS)}}<span class="h4">%</span></span>
+            <span class="h5 header-pretitle text-dark d-block mb-5">
               Upfront Fixed APY*
             </span>
 
